# CodeCompanion

./: .env.example  .gitignore  PERFORMANCE_OPTIMIZATION.md  README.md  app.db  auto_grader_mvp.py  auto_grader_with_rag.py  build_knowledge_base.py  clear_grade_data.py  clear_output.txt  development_report.docx  docker-compose.yml  generate_50_submissions.py  generate_manual.py  generate_report.py  h origin main  pyproject.toml  railway.toml  requirements.txt  start.bat  stop.bat  student_tutor_app.py  teacher_dashboard.py  test_grade.json  test_lti.py  应用手册.docx  开发与应用报告.docx  批改报告修复总结.md  模型配置修复指南.md  演示视频制作指南.md  系统修复总结报告.md  系统修复总结报告_第二批.md
backend/: app.db  pytest.ini  requirements.txt  simple_test.py  test_import.py  test_output.txt  test_output2.txt  test_output3.txt  test_result.txt  test_simple.txt  test_sse_json.py  verify_fix.py  verify_output.txt
backend/app/: main.py
backend/app/api/: auth_routes.py  draft_routes.py  endpoints.py  (+1 more)
backend/tests/: conftest.py  test_auth.py  test_grades.py  test_sandbox.py
config/: settings.py
env/Scripts/: activate.bat
frontend/: index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/e2e/: auth.spec.js
frontend/src/: App.vue  main.js
src/agents/: coordinator.py  diagnostician.py  evaluator.py  tutor.py
src/coze/: coze_client.py
src/knowledge/: __init__.py  graph_builder.py  graph_data.py
src/languages/: python_parser.py
src/plagiarism/: ast_fingerprint.py  detector.py
src/sandbox/: secure_executor.py
src/utils/: cache.py
作业/: 孙七.py  张三.py  李四.py  王五.py  赵六.py
(+112 files in other folders)
