[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "educational-agent-backend"
version = "1.0.0"
description = "教育智能体后端服务"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic==2.5.2",
    "zhipuai",
    "chromadb",
    "sentence-transformers==2.7.0",
    "transformers==4.44.0",
    "httpx",
    "cozepy",
    "pydantic-settings",
    "cachetools",
    "restrictedpython"
]

[tool.setuptools.packages.find]
where = ["backend"]
